# pet-project-price-watcher

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc  vcpkg.json
controllers/: Watcher.cc  Watcher.h
models/: Products.cc  Products.h  model.json
services/: Scraper.cc  Scraper.h  TelegramService.cc  TelegramService.h
